# LI2-Project

./: .gitignore  CMakeLists.txt  README.md
code/: array_operations.c  array_operations.h  block_operations.c  block_operations.h  conversions.c  conversions.h  logger.h  logica.c  logica.h  main.c  operations.c  operations.h  operations_manager.c  operations_storage.c  operations_storage.h  parser.c  parser.h  polymorphic_operations.c  polymorphic_operations.h  stack.c  stack.h  string_operations.c  string_operations.h  variable_operations.c  variable_operations.h  variables.c
